--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -1,12 +1,12 @@
 @font-face {
     font-family: "Gilroy-Medium";
-    src: url("/assets/fonts/Gilroy/Gilroy-Medium.ttf") format("truetype");
+    src: url("../fonts/Gilroy/Gilroy-Medium.ttf") format("truetype");
     font-weight: 400;
     font-style: normal;
 }
 @font-face {
     font-family: "Gilroy-Bold";
-    src: url("/assets/fonts/Gilroy/Gilroy-Bold.ttf") format("truetype");
+    src: url("../fonts/Gilroy/Gilroy-Bold.ttf") format("truetype");
     font-weight: 700;
     font-style: normal;
 }
