--- a/assets/styles/components/home.css
+++ b/assets/styles/components/home.css
@@ -3,7 +3,7 @@
 /* Center Block */
 .center-block {
     position: absolute;
-    top: 0px;
+    top: 0;
     left: 253px;
     width: 752px;
     height: 752px;
@@ -16,8 +16,7 @@
 .center-block.center-animate {
     opacity: 0;
     transform: scale(0.95);
-    animation: center-scale-in 0.3s cubic-bezier(0.25, 0.46, 0.45, 0.94) 0.25s
-        forwards;
+    animation: center-scale-in 0.3s cubic-bezier(0.25, 0.46, 0.45, 0.94) 0.25s forwards;
 }
 
 @keyframes center-scale-in {
@@ -28,24 +27,34 @@
 }
 
 /* Last Connections Section */
-.last-connections-title {
+.last-connections-title,
+.instances-title {
     position: absolute;
-    top: 32px;
     left: 48px;
     font-size: 24px;
     font-weight: 700;
     color: #fff;
     font-family: "Gilroy-Bold", Helvetica, Arial, sans-serif;
 }
+.last-connections-title { top: 32px; }
+.instances-title { top: 344px; }
 
-.last-connections-divider {
+.last-connections-divider,
+.instances-divider {
     position: absolute;
-    top: 45px;
-    left: 252px;
-    width: 452px;
     height: 2px;
     background: #1b1b1b;
     border-radius: 360px;
+}
+.last-connections-divider {
+    top: 45px;
+    left: 252px;
+    width: 452px;
+}
+.instances-divider {
+    top: 359px;
+    left: 170px;
+    width: 534px;
 }
 
 /* Connection Cards */
@@ -60,45 +69,15 @@
     cursor: pointer;
     transition: filter 0.25s ease-out;
 }
-
-.connection-card-1 {
-    top: 85px;
-}
-
-.connection-card-2 {
-    top: 166px;
-}
-
-.connection-card-3 {
-    top: 247px;
-}
-
-.connection-card:hover {
+.connection-card-1 { top: 85px; }
+.connection-card-2 { top: 166px; }
+.connection-card-3 { top: 247px; }
+.connection-card:hover,
+.instance-card:hover {
     filter: brightness(1.15);
 }
 
 /* Instances Section */
-.instances-title {
-    position: absolute;
-    top: 344px;
-    left: 48px;
-    font-size: 24px;
-    font-weight: 700;
-    color: #fff;
-    font-family: "Gilroy-Bold", Helvetica, Arial, sans-serif;
-}
-
-.instances-divider {
-    position: absolute;
-    top: 359px;
-    left: 170px;
-    width: 534px;
-    height: 2px;
-    background: #1b1b1b;
-    border-radius: 360px;
-}
-
-/* Instance Card */
 .instance-card {
     position: absolute;
     top: 397px;
@@ -110,9 +89,6 @@
     filter: brightness(1);
     cursor: pointer;
     transition: filter 0.25s ease-out;
-}
-.instance-card:hover {
-    filter: brightness(1.15);
 }
 
 /* Play Together Block */
@@ -131,8 +107,7 @@
 .play-together.play-animate {
     opacity: 0;
     transform: translateX(-200px);
-    animation: play-together-slide-in 0.3s cubic-bezier(0.25, 0.46, 0.45, 0.94)
-        0.3s forwards;
+    animation: play-together-slide-in 0.3s cubic-bezier(0.25, 0.46, 0.45, 0.94) 0.3s forwards;
 }
 
 @keyframes play-together-slide-in {
